# snippet

./: .gitignore  .gitmodules  BENCHMARK_REPORT.md  CMakeLists.txt  MemAlloc.cpp  PERFORMANCE_REPORT_768D.md  README.md  acos.cpp  ann_topn_demo.py  assert_cast.cpp  atomic.cpp  benchmark.py  bigstring.py  bit_shift.cpp  bitmap_union.py  branch.cpp  cache.cpp  cache_by_mutex.cpp  cast.cpp  char.cpp  compress_vc.py  compression_string.cpp  connector.py  debug_cast_datetime.py  demangle.cpp  dp.cpp  explain.py  fmt.cpp  generate_datasets.py  generate_datasets_768d.py  histogram.py  index_types_benchmark_results.csv  insert_random.py  jiashi-datagen.py  lambda_func_multi_threads.cpp  marco.cpp  money_format.cpp  multimap.cpp  noexcept.cpp  or.cpp  (+26 more)
.opencode/skills/benchmark-report/: SKILL.md
algorithm-checklist/: 图结构基础算法题清单.md  排序相关题目checklist.md
antlr/: Calc.g4  CalcLexerRules.g4  CalcTest.java  Hello.g4
antlr/calc/: Calc.interp  Calc.tokens  CalcBaseListener.java  CalcLexer.interp  CalcLexer.java  CalcListener.java  CalcParser.java  CalcTest.java
cloud-code-env/: claude-code-router-config.json  env-deploy.sh  env-install.sh
code-editing-agent/: go.mod
cpu_profile/: README.md  main.cpp
csapp/: CMakeLists.txt  show_bytes.cpp  strict-aliasing.cpp
datasets/sql/: 01_sift_user_1w.sql  02_sift_user_10w.sql  03_sift_user_50w.sql  04_sift_user_100w.sql  05_cohere_user_1w.sql  06_cohere_user_10w.sql  07_cohere_user_50w.sql  08_cohere_user_100w.sql  09_sift_user_1w_pq.sql  10_sift_user_10w_pq.sql  11_sift_user_50w_pq.sql  12_sift_user_100w_pq.sql  13_cohere_user_1w_pq.sql  14_cohere_user_10w_pq.sql  15_cohere_user_50w_pq.sql  16_cohere_user_100w_pq.sql  load_all.sh
deploy_monitoring/: README.md  deploy_monitoring.sh
diskann/: DiskAnn.md  diskannpy_dynamic_vs_static_demo.py  milvus-diskann-build-then-insert.py  milvus-diskann.py
diskann-demo/: CMakeLists.txt
doris_vs/: demo.py
faiss-demo/: CMakeLists.txt  faiss_demo.cpp  faiss_main.py
faiss_ivf/: Doris.md  README.md
faiss_ivf_on_disk/: CMakeLists.txt  faiss_ivf_on_disk.cpp  my_ivf_on_disk.cpp
hnsw/: hnsw_demo.py  nsw_demo.py
integrate_faiss/: CMakeLists.txt  PQ参数分析总结.md  ana.py  analysis.py  cli_utils.cpp  cli_utils.h  faiss_analysis.cpp  k-means.py  k-means2.py  main.cpp  pq-bench1.py  pq.py  pq_analysis_optimized.py  pq_parameter_analysis.cpp  pq_parameter_analysis.py  pq_parameter_analysis_simple.cpp  rabitq-1.py  rabitq-2.py  sq.cpp  sq_multi_test.cpp  test_hnswpq.cpp  test_hnswrabitq.cpp
integrate_faiss/src/: faiss_analysis.cpp
integrate_faiss/util/: results_utils.cpp  results_utils.h
integrate_faiss/vecml_shim/: vecml_shim.cpp  vecml_shim.h
ivf_mmap_proto/: README.md  faiss_like_ondisk_ivf.cpp  prototype.cpp  prototype.py
jvm_monitor/: script.py
lang-chain/: demo.py  prepare.py
log_file/: parse.py
multi-process-poc/: database.py  multi-process-poc.py  myprofile.py  profile-demp.py
multi-process-poc/sql/clickbench/modified/: queries.sql
multi-process-poc/sql/clickbench/origin/: queries.sql
multi-process-poc/sql/tpch/: t.sh
multi-process-poc/sql/tpch/modified/: q1.sql  q12.sql  q17.sql  q18.sql  q22.sql  q3.sql  q4.sql  q7.sql  q8.sql
multi-process-poc/sql/tpch/origin/: q11.sql  q15.sql  q18.sql  q2.sql  q22.sql  q7.sql
multi_process_poc/sql/clickbench/modified/: queries.sql
multi_process_poc/sql/tpch/modified/: q10.sql  q11.sql  q14.sql  q15.sql  q16.sql  q19.sql  q2.sql  q20.sql  q21.sql  q5.sql  q6.sql  q9.sql
multi_process_poc/sql/tpch/origin/: q10.sql  q20.sql  q21.sql  q4.sql
openmp/: CMakeLists.txt  omp_multi_threads.cpp  omp_thread_demo.cpp
page-cache/: monitor.py
pipeline/: compare_join_engines.py  pipeline.md  pipeline_prototype.py  volcano_prototype.py
profile_view/: test.profile  test.profile.graph  visualize_query_plan.py
profile_view/back/: test.profile  test.profile.graph
quantization/: lut.py  poc.py  pq-1.py  pq-2.py  pq-bench.py  pq.py  sq.py
regression-test/: ann_topn_search.sql
schema_change/: main.py
search/: ann_scripts.py  bench_hnsw.py  compare_with_native_faiss.py  concurrent_ann_benchmark.py  doris_ann_bench.py  faiss_demo.py  faiss_duckdb.py  faiss_duckdb_gpt.py  load_data.py  load_data_doris.py  prepare-stmt.py  query.py  rrf.py  stability_test.py  usearch.py
snippets_of_snippets/: CMakeLists.txt
snippets_of_snippets/assign_operator/: README.md  assign_operator.cpp
snippets_of_snippets/dup_elements/: README.md  dup_elements.cpp
snippets_of_snippets/exception_safety/: README.md
snippets_of_snippets/singleton/: README.md  singleton.cpp
sysbench/: analysize.py  etl.py  etl2.py  extract.py  fe.audit.log.0  fe.audit.log.0.cleaned  fe.audit.log.0.cleaned.modified  fe.audit.log.0.filtered  fe.audit.log.0.processed  fe.audit.log.1.processed  format.py  select_random_ranges_custom.lua  sysbench.py
vamana_proto/: README.md  tutorial.py
vecml/: CMakeLists.txt  sdk_utility_test.cc
vector-search/milvus/: demo.py
vector_bench/include/vector_bench/: benchmark_config.h  cli.h  dataset.h  faiss_library.h  metrics.h  pipeline.h  recall.h  result_writer.h  vector_library.h
vector_bench/src/: cli.cpp  dataset.cpp
vsag-demo/: vsag_python_demo.py
workspace_setup/: workspace_setup.sh
workspace_setup/base_be_conf/: be.conf
workspace_setup/base_fe_conf/: fe.conf
