[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "doris-vector-bench"
version = "0.1.0"
description = "Doris brute-force vector search benchmark"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "mysql-connector-python",
    "matplotlib",
    "pyarrow",
]
